4 - Modify typography and label styles

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@material/image-list": "^3.0.0",
     "@material/list": "^3.0.0",
     "@material/ripple": "^1.1.0",
-    "@material/textfield": "^1.0.1"
+    "@material/textfield": "^1.0.1",
+    "@material/typography": "^3.0.0"
   }
 }
