--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@material/button": "^1.0.1",
     "@material/drawer": "^3.0.0",
+    "@material/elevation": "^3.0.0",
     "@material/image-list": "^3.0.0",
     "@material/list": "^3.0.0",
     "@material/ripple": "^1.1.0",
